--- a/ilab/src/main/webapp/parametros/examen/search.xhtml
+++ b/ilab/src/main/webapp/parametros/examen/search.xhtml
@@ -99,6 +99,15 @@
 						<h:outputText id="itemDecripcion" value="#{_item.decripcion}"/>
 					</h:link>
 				</h:column>
+				<h:column>
+					<f:facet name="header">
+						<h:outputText value="Opciones"/>
+					</f:facet>
+					<h:link outcome="/parametros/examen/ComponentesPaso1" styleClass="btn btn-primary">
+						<f:param name="id" value="#{_item.idExamen}"/>
+						<h:outputText id="itemUsuarioPassword" value="Componentes"/>
+					</h:link>
+				</h:column>
 			</h:dataTable>
 			<ui:include src="/resources/scaffold/paginator.xhtml">
 				<ui:param name="paginatorBean" value='#{examenBean}'/>
